--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"react": "18.2.0",
+		"react-circular-progressbar": "^2.1.0",
 		"react-dom": "18.2.0",
 		"react-swipeable-list": "^1.9.1",
 		"uuid": "9.0.0"
